# AutoLoginCampusWIFI

./: CMakeLists.txt  README.md  main.cpp
include/: FileHandler.h  HttpRequest.h  Tools.h  WIFI.h  encode.h  struct.h
